Cutting over to abstract only links for web site.

--- a/AntiRats/burke.html
+++ b/AntiRats/burke.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
-            and of the Birth of Modern Sophistry
+            Burke on Rationalism, Prudence and Reason of State 
         </title>
     </head>
 
@@ -72,8 +71,7 @@
         </div>
 
         <h1>
-            "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
-            and of the Birth of Modern Sophistry
+            Burke on Rationalism, Prudence and Reason of State 
         </h1>
 
             <p class="author_info">
