--- a/AntiRats/gadamer.html
+++ b/AntiRats/gadamer.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Anti-Rationalism and Hermeneutics
+            Anti-rationalism, Relativism, and the Metaphysical Tradition:
+            Situating Gadamer’s Philosophical Hermeneutics 
         </title>
     </head>
 
@@ -71,7 +72,8 @@
         </div>
 
         <h1>
-            The Metaphysical Historicism of Hans-Georg Gadamer
+            Anti-rationalism, Relativism, and the Metaphysical Tradition:
+            Situating Gadamer’s Philosophical Hermeneutics 
         </h1>
 
         <p>
