--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -97,7 +97,7 @@
 
         <ul class="nested">
             <li>
-                <a href="drafts/Intro.pdf">
+                <a href="Intro.html">
                 Introduction
                 </a>
                 <br>
@@ -112,11 +112,9 @@
 
             <li>
                 Edmund Burke:
-                <a href="drafts/Burke.pdf">
+                <a href="burke.html">
                     Burke on Rationalism, Prudence and Reason of State
                 </a>
-                <br>
-                (<a href="burke.html">Abstract</a>)
                 <br>
                     <a href="bios.html#horcher">
                     Ferenc Hörcher,
@@ -128,11 +126,9 @@
 
             <li>
                 Alexis de Tocqueville:
-                <a href="drafts/Tocqueville.pdf">
+                <a href="tocqueville.html">
                 The Uneasy Friendship Between Reason and Freedom
                 </a>
-                <br>
-                (<a href="tocqueville.html">Abstract</a>)
                 <br />
                     <a href="bios.html#smith">
                     Travis D. Smith
@@ -145,11 +141,9 @@
 
             <li>
                 Søren Kierkegaard:
-                <a href="drafts/Kierkegaard.pdf">
+                <a href="kierkegaard.html">
                     Kierkegaard's Later Critique of Political Rationalism
                 </a>
-                <br>
-                (<a href="kierkegaard.html">Abstract</a>)
                 <br />
                     <a href="bios.html#wyllie">
                     Robert Wyllie
@@ -158,11 +152,9 @@
 
             <li>
                 Friedrich Nietzsche:
-                <a href="drafts/Nietzsche.pdf">
+                <a href="nietzsche.html">
                 The Hammer Goes to Monticello
                 </a>
-                <br>
-                (<a href="nietzsche.html">Abstract</a>)
                 <br>
                     <a href="bios.html#garrison">
                     Justin Garrison,
@@ -171,20 +163,8 @@
             </li>
 
             <li>
-                G.K. Chesterton:
-                The Practical Mysticism of Chesterton
-                <br>
-                    <a href="bios.html#kos">
-                    Eric S. Kos,
-                    </a>
-                    Siena Heights University
-            </li>
-
-            <li>
                 T.S. Eliot: 
-                <a href="drafts/Eliot.pdf">
                 Pagans, Christians, Poets
-                </a>
                 <br>
                     <a href="bios.html#abel">
                     Corey Abel
@@ -192,11 +172,9 @@
             </li>
 
             <li>
-                <a href="drafts/Wittgenstein.pdf">
+                <a href="wittgenstein.html">
                 Wittgenstein on Rationalism
                 </a>
-                <br>
-                (<a href="wittgenstein.html">Abstract</a>)
                 <br>
                     <a href="bios.html#sportiello">
                     Daniel Sportiello
@@ -204,11 +182,9 @@
             </li>
 
             <li>
-                <a href="drafts/Heidegger.pdf">
+                <a href="heidegger.html">
                 Heidegger’s Critique of Rationalism and Modernity
                 </a>
-                <br>
-                (<a href="heidegger.html">Abstract</a>)
                 <br>
                     <a href="bios.html#simmons">
                     Jack Simmons,
@@ -230,11 +206,9 @@
 
             <li>
                 Michael Polanyi:
-                <a href="drafts/Polanyi.pdf">
+                <a href="polanyi.html">
                 A Scientist Against Scientism
                 </a>
-                <br>
-                (<a href="polanyi.html">Abstract</a>)
                 <br>
                     <a href="bios.html#lowney">
                     Charles W. Lowney,
@@ -243,7 +217,7 @@
             </li>
 
             <li>
-                <a href="drafts/Lewis.pdf">
+                <a href="lewis.html">
                 C.S. Lewis: Reason, Imagination, and the Abolition of Man
                 </a>
                 <br />
@@ -256,7 +230,7 @@
             <li>
                 <a href="hayek.html">
                 F.A. Hayek:
-                Post-Atomic Liberalism
+                Postatomic Liberalism
                 </a>
                 <br>
                     <a href="bios.html#cowen">
@@ -267,12 +241,10 @@
 
             <li>
                 Hans-Georg Gadamer:
-                <a href="drafts/Gadamer.pdf">
+                <a href="gadamer.html">
                     Anti-rationalism, Relativism, and the Metaphysical Tradition:
                     Situating Gadamer’s Philosophical Hermeneutics
                 </a>
-                <br>
-                (<a href="gadamer.html">Abstract</a>)
                 <br>
                     <a href="bios.html#holston">
                     Ryan Holston,
@@ -281,9 +253,7 @@
             </li>
 
             <li>
-                <a href="drafts/Voegelin.pdf">
                 Eric Voegelin and Enlightenment Rationalism
-                </a>
                 <br>
                     <a href="bios.html#federici">
                     Michael P. Federici,
@@ -293,11 +263,9 @@
 
             <li>
                 Michael Oakeshott:
-                <a href="drafts/Oakeshott.pdf">
+                <a href="oakeshott.html">
                 Michael Oakeshott's Critique of Modern Rationalism
                 </a>
-                <br>
-                (<a href="oakeshott.html">Abstract</a>)
                 <br />
                     <a href="bios.html#coats">
                     John Coats,
@@ -306,25 +274,10 @@
             </li>
 
             <li>
-                W.V.O. Quine:
-                <a href="quine.html">
-                Who’s a Good Dogma?!?: Perspectives on Quine’s Critique of
-                Analyticity
-                </a>
-                <br />
-                    <a href="bios.html#brommage">
-                    Thomas J. Brommage,
-                    </a>
-                    Sam Houston State University
-            </li>
-
-            <li>
                 Isaiah Berlin:
-                <a href="drafts/Berlin.pdf">
+                <a href="berlin.html">
                     Berlin and Moral Monism
                 </a>
-                <br>
-                (<a href="berlin.html">Abstract</a>)
                 <br>
                     <a href="bios.html#ferrell">
                     Jason Ferrell,
@@ -334,11 +287,9 @@
 
             <li>
                 Russell Kirk:
-                <a href="drafts/Kirk.pdf">
+                <a href="kirk.html">
                 The Mystery of Human Existence
                 </a>
-                <br>
-                (<a href="kirk.html">Abstract</a>)
                 <br>
                     <a href="bios.html#blake">
                     Nathanael Blake
@@ -346,12 +297,10 @@
             </li>
 
             <li>
-                <a href="drafts/Jacobs.pdf"> 
+                <a href="jacobs.html">
                 Jane Jacobs and the Knowledge
                 Problem in Cities
                 </a>
-                <br>
-                (<a href="jacobs.html">Abstract</a>)
                 <br>
                     <a href="bios.html#ikeda">
                     Sanford Ikeda,
@@ -361,12 +310,10 @@
 
             <li>
                 Alasdair MacIntyre:
-                <a href="drafts/MacIntyre.pdf">
+                <a href="macintyre.html">
                     Practical Reason and Teleology:
                     MacIntyre’s Critique of Modern Moral Philosophy
                 </a>
-                <br>
-                (<a href="macintyre.html">Abstract</a>)
                 <br>
                     <a href="bios.html#mcintyre">
                     Kenneth McIntyre,
