--- a/AntiRats/macintyre.html
+++ b/AntiRats/macintyre.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-                Alasdair MacIntyre:
-                Modern Moral Philosophy, Virtue, and Pluralism:  MacIntyre and
-                the Quest for the Human <i>Telos</i>
+            Practical Reason and Teleology:
+            MacIntyre’s Critique of Modern Moral Philosophy
         </title>
     </head>
     <body>
@@ -72,9 +71,8 @@
         </div>
 
         <h1>
-                Alasdair MacIntyre:
-                Modern Moral Philosophy, Virtue, and Pluralism:  MacIntyre and
-                the Quest for the Human <i>Telos</i>
+            Practical Reason and Teleology:
+            MacIntyre’s Critique of Modern Moral Philosophy
         </h1>
 
 
