--- a/AntiRats/kierkegaard.html
+++ b/AntiRats/kierkegaard.html
@@ -75,8 +75,9 @@
         </h1>
 
             <p class="author_info">
-            Rob Wyllie
+                Robert Wyllie
             </p>
+
             <h2>
                 Abstract
             </h2>
