Got in a bunch o' new consents and abstracts.

--- a/AntiRats/gadamer.html
+++ b/AntiRats/gadamer.html
@@ -78,24 +78,24 @@
 
         <p>
             Hans-Georg Gadamer repeatedly acknowledges his deep indebtedness to
-            Martin Heidegger.  His habilitation dissertation was done under
+            Martin Heidegger. His habilitation dissertation was done under
             Heidegger, and Heidegger’s historicism had a deep and lasting
-            impact on Gadamer’s theory of philosophical hermeneutics.  This
+            impact on Gadamer’s theory of philosophical hermeneutics. This
             influence has led many to conclude – with positive attribution, in
             those such as Richard Rorty, or with negative attribution, in those
-            such as Leo Strauss – that Gadamer is a moral relativist.  Yet,
+            such as Leo Strauss – that Gadamer is a moral relativist. Yet,
             notwithstanding his explicit appropriation of Heidegger, Gadamer
-            refutes this charge throughout his career.  What is even more
+            refutes this charge throughout his career. What is even more
             perplexing is that Gadamer’s relationship to the metaphysical
-            tradition runs deep.  Indeed, one prominent commentator has
+            tradition runs deep. Indeed, one prominent commentator has
             described him as having roots in a metaphysical tradition that
-            encompasses Plato, Neoplatonism, and St. Augustine.  What is more,
+            encompasses Plato, Neoplatonism, and St. Augustine. What is more,
             Gadamer explicitly and somewhat bluntly refers to himself late in
-            his career as a “Platonist.”  This essay will seek to explore
+            his career as a “Platonist.” This essay will seek to explore
             Gadamer’s ambivalent relationship to Heidegger and the unusual way
-            in which he combines Heidegger’s historicism, which itself has
-            radically relativistic implications, with the tradition of Western
-            metaphysics that was the very target of Heidegger’s critique.
+            in which he combines Heidegger’s insights into the historical
+            nature of human knowing with the tradition of Western metaphysics
+            that was the very target of Heidegger’s critique.
         </p>
 
     </body>
