Added MacIntyre abstract.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -185,10 +185,12 @@
                     book <i>The Historical Mind: Humanistic Renewal in a
                         Post-Constitutional Age</i>.
                 </a>
+                <br>
+                <img src="graphics/Garrison.jpg" width="14%" class="center-img">
             </li>
 
             <li>
-                <a name="simmons">
+                <a name="holston">
                 <span class="contrib">Ryan R. Holston</span>
                 </a>
                  is Professor and holder of the Jonathan Myric Daniels '61
