Added Heidegger abstract

--- a/AntiRats/heidegger.html
+++ b/AntiRats/heidegger.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Martin Heidegger:  The Limiting Character of the Scientific Method
+            Heidegger’s Critique of Rationalism and Modernity
         </title>
     </head>
 
@@ -71,32 +71,39 @@
         </div>
 
         <h1>
-            Martin Heidegger:  The Limiting Character of the Scientific Method
+            Heidegger’s Critique of Rationalism and Modernity
         </h1>
 
             <p class="author_info">
             Jack Simmons
             </p>
-            
+
             <h2>
-            Abstract
+                Abstract
             </h2>
 
-        <p>
-        In the hands of Edmund Husserl and Martin Heidegger, phenomenology
-        became a way of reflecting upon the rigor of philosophy and science.
-        While Husserl aimed at adding rigor to philosophical investigation,
-        Heidegger, more profoundly, reveals the inherent weaknesses of the
-        sciences, such as mathematics, physics and biology, in “obtaining and
-        securing the primary way of access to what are supposedly the objects
-        of this science.” Heidegger claims that the phenomenological method
-        reveals the a priori conditions necessary for the sciences mentioned
-        above, and the inherent weaknesses and blind spots of those
-        disciplines.  In this chapter, I propose to explain Heidegger’s
-        criticism of scientific reasoning along with his call for a more
-        profound approach to thinking that references both medieval and
-        pre-Socratic world-views.
-        </p>
-            
+            <p>
+
+            Heidegger argues that the overly reductionist approach of the
+            natural sciences, since 1850, renders it blind to the essential
+            character of nature. Instead of revealing nature to us, modern
+            scientific thinking conceals nature behind the veil of its own
+            interests, interests driven by the quest for technological mastery
+            over nature and circumscribed by its mathematical method. This
+            chapter reconstructs Heidegger’s general critique of modern
+            math-based science by focusing on how the scientific thinking
+            informs thinking in general, how it dictates the way objects
+            appear, the character of causation and free will, and the character
+            of science now that it has come under the sway of technological
+            thinking.  While the chapter does not investigate Heidegger’s
+            solutions to this problem, a brief discussion of Plato’s notion of
+            wonder, as the basis of philosophical thinking, points us in the
+            direction of a new, or perhaps old, way of thinking.  
+
+
+            </p>
+
+
+
     </body>
 </html>
