Updated Berlin and Tocqueville web abstracts.

--- a/AntiRats/tocqueville.html
+++ b/AntiRats/tocqueville.html
@@ -83,59 +83,29 @@
             </h2>
 
             <p>
-            In this chapter, we discuss Tocqueville’s nuanced criticism of
-            rationalism by examining his views on the relationship between
-            philosophy and politics in <i>Democracy in America</i> and
-            <i>Recollections</i>. As a friend of democracy, Tocqueville teaches
-            us that the preservation of liberty requires a new political
-            science to educate the ineluctably emerging democratic social
-            state. His political science finds that the ascendant political
-            science of the enlightenment, which aims at wholesale social
-            engineering, is actually an unscientific and partial ideology that
-            is oblivious to certain aspects of the human condition and
-            obliterates other parts.
-            </p>
+            This chapter discusses Alexis de Tocqueville’s nuanced criticism of
+            rationalism. Being a modern liberal and critical friend of
+            democracy, his political science finds that Enlightenment political
+            science, which aims at wholesale social engineering, is actually an
+            unscientific and partial ideology. Rationalism espoused by French
+            philosophes and physiocrats depends on assuming ever more control
+            over people’s lives, destroying politics properly so-called.
+            Tocqueville recommends keeping some distance between politics and
+            philosophy, for the sake of both, and ultimately for our sake. We
+            discern that the relationship between politics and philosophy can
+            best be described as an uneasy friendship. Reason and liberty
+            should benefit each other mutually and reciprocally, but they
+            cannot do so if they are in a relationship where one dominates the
+            other in however well-meaning a fashion, or if it is imagined that
+            their unity is too easily attained and secured. Political freedom
+            requires virtue, and virtue requires reason, but reason is best
+            developed when human beings are given the freedom to develop their
+            own minds and character in association with others. Although reason
+            and liberty are inherently complementary, politics dominated by an
+            uncritical veneration of reason, especially an Enlightenment
+            conception of reason that is simultaneously excessive and
+            deficient, undermines virtue and freedom alike. 
 
-            <p>
-            Tocqueville recognizes that both ethics and political science,
-            culminating in legislation, require reasoned virtue. Thus, reason
-            and political liberty are inherently complementary. Human happiness
-            depends on the freedom to gain the experience by participating in
-            politics in order to acquire good judgment and act successfully. On
-            account of the very freedoms citizens must exercise, risk and
-            uncertainty as well as disagreement and some disorder are
-            inevitable. However, the kind of rationalism espoused by French
-            philosophes, aiming to manufacture the conditions under which
-            people may be rendered free and equal—especially equal—depends on
-            assuming ever more control over people’s lives, destroying the
-            politics properly so-called. As both a scholar and a statesman,
-            Tocqueville witnessed firsthand multiple attempts to implement
-            rationalistic systems firsthand following the end of the Old
-            Regime. His more human science explains why theirs necessarily
-            fails to produce the supposedly just society or free people they
-            are purportedly designed to construct while succeeding instead at
-            fostering ever more dehumanizing injustices.
-            </p>
-
-            <p>
-            Politics is not the highest thing and philosophy should not be
-            wholly subservient to it, and people should not wholly submit to a
-            rationalized politics that expects too much from politics and
-            cannot appreciate what is beyond our outside of politics.
-            Tocqueville’s political philosophy therefore recommends keeping
-            some distance between politics and philosophy, for the sake of
-            both, and ultimately for our sake. The relationship between
-            politics and philosophy can best be described as an uneasy
-            friendship. Reason and liberty should benefit each other mutually
-            and reciprocally, but they cannot do so if they are in a
-            relationship where one dominates the other in however well-meaning
-            a fashion, or if it is imagined that their unity is too easily
-            attained and secured. Political freedom requires virtue, and virtue
-            requires reason, but reason is best developed when human beings are
-            given the freedom to meet their greatest potential. Politics
-            dominated by uncritical veneration of reason, especially an
-            Enlightenment conception of reason that is simultaneously excessive
-            and deficient, undermines virtue and freedom alike.
             </p>
 
 
