Moved Tradition V. Raitonalism to main raitonalism page.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     Topics
                 </h2>
 
+                <h3>
+                    <a href="FourCritics/index.html">
+                        Tradition V. Rationalism
+                    </a> 
+                </h3>
 
                 <h3>
                     <a href="AntiRats/index.html">
