--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -164,7 +164,9 @@
 
             <li>
                 T.S. Eliot: 
+                <a href="eliot.html">
                 Pagans, Christians, Poets
+                </a>
                 <br>
                     <a href="bios.html#abel">
                     Corey Abel
