Corrected broken four critics link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h2>
 
                 <h3>
-                    <a href="FourCritics/index.html">
+                    <a href="http://gcallah.github.io/FourCritics/index.html">
                         Tradition V. Rationalism
                     </a> 
                 </h3>
