--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -113,6 +113,10 @@
             </li>
 
             <li>
+                John Gray
+            </li>
+
+            <li>
                 James C. Scott:
                 Seeing Like a Rationalist
             </li>
