--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -97,6 +97,12 @@
             </li>
 
             <li>
+                G.K. Chesterton
+                <br>
+                Eric Kos
+            </li>
+
+            <li>
                 Elizabeth Anscombe
             </li>
 
