Added Nathan for John Gray.

--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -120,6 +120,8 @@
 
             <li>
                 John Gray
+                <br />
+                Nathan Cockerham
             </li>
 
             <li>
