Added blurbs to main page.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -90,10 +90,60 @@
             critics of Enlightenment rationalism. The essays on each thinker
             are intended not merely to offer a discussion of that thinker, but
             also to place him or her in the context of this larger stream of
-            anti-rationalist thought. Below is a list of chapters,
-            along with the author for the chapter, and a link to the
-            abstract, if available.
+            anti-rationalist thought.
         </p>
+
+        <h3>
+            Reviewers' comments:    
+        </h3>
+
+        <ul>
+            <li>
+                "Callahan and McIntyre have brought together a distinguished
+                and cosmopolitan array of contributors who have produced a
+                lively and provocative collection of essays exploring and
+                analysing the modern phenomenon of Enlightenment rationalism
+                whose distinguished critics range from the historically
+                important Edmund Burke, Alexis de Tocqueville, and Friedrich
+                Nietzsche, to our near contemporaries Hans-Georg Gadamer, Eric
+                Voegelin and Michael Oakeshott. The connecting and fascinating
+                thread that runs through the volume is a relentless critique of
+                a style of thinking that prioritises the pursuit of certainty,
+                and a blind belief in the powers of instrumental reason to
+                overcome all adversity."
+                <br />
+                David Boucher
+                <br />
+                Professor of Political Philosophy and International Relations
+                <br />
+                Cardiff University
+            </li>
+
+            <li>
+                "This is a remarkable and remarkably comprehensive collection
+                on thinkers who questioned enlightenment rationalism, both in
+                the nineteenth and twentieth century. The list is impressive:
+                Tocqueville, Kierkegaard, Burke, Nietzsche, Eliot, as well as
+                Oakeshott, Hayek, Alasdair MacIntyre,  and a number of others
+                equally stellar, and equally deep and complex. The essays are
+                by accomplished scholars, and show that the opposition to
+                enlightenment rationalism was both diverse and strikingly
+                coherent, and a treasure trove for thinking beyond the
+                enlightenment. It will be especially valuable for those with
+                interests in one of these thinkers to see them in the context
+                of the larger fraternity to which they belong."
+                <br />
+                Stephen Turner
+                <br />
+                Distinguished University Professor
+                <br />
+                University of South Florida
+            </li>
+        </ul>
+
+        <h3>
+            Table of Contents
+        </h3>
 
         <ul class="nested">
             <li>
