--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -82,9 +82,7 @@
             <li>
                 Fyodor Dostoevsky:
                 <br />
-                    <a href="bios.html#marsh">
-                    Leslie Marsh
-                    </a>,
+                    Leslie Marsh,
                     The University of British Columbia
             </li>
 
