--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -106,6 +106,13 @@
 
             <li>
                 Robert Nisbet
+                <br />
+                    <a href="bios.html#sheahan">
+                        Luke Sheahan
+                    </a>
+                    Assistant Professor, Department of Political Science
+                    Duquesne University
+
             </li>
 
             <li>
