Added Avramenko blurb.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -139,6 +139,27 @@
                 <br />
                 University of South Florida
             </li>
+            <li>
+                "This volume could not have arrived at a better time. McIntyre
+                and Callahan have given us an excellent set of essays that
+                speaks directly to the fetishization of human reason. Each of
+                the thinkers examined reminds us of the fallibility of human
+                beings — a lesson we sorely need to revisit every generation or
+                so."
+                <br />
+                Richard Avramenko
+                <br />
+                Professor, Department of Political Science
+                <br />
+                Chair, Integrated Liberal Studies
+                <br />
+                Director, Center for the Study of Liberal Democracy
+                <br />
+                Editor-in-Chief, The Political Science Reviewer
+                <br />
+                University of Wisconsin-Madison
+            </li>
+
         </ul>
 
         <h3>
@@ -328,7 +349,7 @@
             <li>
                 Isaiah Berlin:
                 <a href="berlin.html">
-                    Berlin and Moral Monism
+                    Isaiah Berlin on Monism
                 </a>
                 <br>
                     <a href="bios.html#ferrell">
