--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -109,6 +109,16 @@
             </li>
 
             <li>
+                Irving Babbitt
+                <br />
+                <a href="bios.html#garrison">
+                    Justin Garrison
+                </a>
+                Associate Professor of Political Science
+                Roanoke College
+            </li>
+
+            <li>
                 Elizabeth Anscombe
             </li>
 
