--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -76,11 +76,18 @@
 
         <ul>
             <li>
+                Giambattista Vico
+                <br />
+                    Emily Finley,
+                    Catholic University of America
+            </li>
+
+            <li>
                 Samuel Coleridge
             </li>
 
             <li>
-                Fyodor Dostoevsky:
+                Fyodor Dostoevsky
                 <br />
                     <a href="bios.html#marsh">
                     Leslie Marsh
@@ -130,7 +137,8 @@
             </li>
 
             <li>
-                Nassim Nicholas Taleb
+                Nassim Nicholas Taleb:
+                The Lindy Effect
             </li>
 
         </ul>
