--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -119,7 +119,7 @@
                 Irving Babbitt
                 <br />
                 <a href="bios.html#garrison">
-                    Justin Garrison
+                    Justin Garrison,
                 </a>
                 Associate Professor of Political Science
                 Roanoke College
@@ -133,7 +133,7 @@
                 Robert Nisbet
                 <br />
                     <a href="bios.html#sheahan">
-                        Luke Sheahan
+                        Luke Sheahan,
                     </a>
                     Assistant Professor, Department of Political Science
                     Duquesne University
