Added de Maistre and Percy to potential author list.

--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -83,6 +83,10 @@
             </li>
 
             <li>
+                Joseph de Maistre
+            </li>
+
+            <li>
                 Samuel Coleridge
             </li>
 
@@ -142,6 +146,10 @@
 
             <li>
                 Paul Feyerabend: Anything Goes
+            </li>
+
+            <li>
+                Walker Percy
             </li>
 
             <li>
