Far along in piece.

--- a/IdeologicalBlues.html
+++ b/IdeologicalBlues.html
@@ -99,8 +99,8 @@
             </p>
 
             <p>
-                "An ideology is a mechanism for constructing and keeping
-                intact a second reality."
+                "An ideology is a collection of postulates for constructing and
+                keeping intact a second reality."
             </p>
 
             <p>
@@ -266,26 +266,80 @@
                 of the ideology in question. No, both serve, instead, to
                 <i>dismiss</i> the voice of any outsider criticizing any aspect
                 of the ideology in question: such critics most emphatically
-                should <i>not</i> be
-
-                heard, because to actually engage their critique would be to
-                give encouragement to... well, whatever enemy the ideology in
-                question has identified as the demonic resistance to the
-                establishment of paradise on earth: perhaps it is "the
-                capitalists," or "the Jews," or "the Islamo-fascists," or "the
-                patriarchists," or "the cis-gendered," or... well, you get the
-                idea!
-            </p>
-
-
-            <p>
-                "If you think noncomputable numbers are real, then prove it by
-                computing one of them for me."
+                should <i>not</i> be heard, because to actually engage their
+                critique would be to give encouragement to... well, whatever
+                enemy the ideology in question has identified as the demonic
+                resistance to the establishment of paradise on earth: perhaps
+                it is "the capitalists," or "the Jews," or "the
+                Islamo-fascists," or "the patriarchists," or "the
+                cis-gendered," or... well, you get the idea!
             </p>
 
             <p>
+                To see that the ideology virus is not particularly a left or
+                right wing disease, and that identifying it is not a partisan
+                campaign, but a mission of public service, I think it will be
+                helpful to look at several more examples. In each, we will see
+                that the ideological response to reasonable criticism is
+                <i>not</i> an attempt to engage with or rationally refute the
+                critic, but instead is a way to erect a defensive shield that
+                renders the ideology impenetrable to criticism from outside.
+            </p>
+
+            <p>
+                My first example has little to do with politics, and the
+                adherents of this dream world, in fact, range all over the
+                "political spectrum." Their dream world insists that
+                "computation," something many of them understand well, as this
+                ideology is particularly popular with programmers and other
+                computer professionals, is an all-encompassing description of
+                reality. A mathematician friend of mine, faced with a
+                "computationalist" ideologue, asked, "Well, don't you think
+                <i>Pi</i> is real?" The response he got was, "If you think
+                noncomputable numbers are real, then prove it by computing one
+                of them for me." Quite clearly, from any reasonable point of
+                view, this response is complete nonsense: if someone thinks
+                that a non-computable number like <i>Pi</i> or <i>e</i> is
+                real, they are claiming that these numbers are real, <i>despite
+                the fact that they cannot be computed</i> (because their
+                decimal expansion is infinite and non-repeating). To demand
+                that such a person prove that these non-computable numbers
+                really exist by computing them is like asking that someone
+                prove that there are living dodo birds by shooting them and
+                bringing in their corpses. Given the complete irrationality of
+                this response, it should be clear that its purpose wasn't to
+                rationally engage with this argument against computationalism,
+                but rather to block it, and prevent it from disturbing the
+                dream world of the computationalist.
+            </p>
+
+            <p>
+                To turn to a more political example, in one of Rod Dreher's
+                recent blog posts at TAC
+                (https://www.theamericanconservative.com/dreher/queering-children-imaginations-rudolph-drag-queen-story-hour/),
+                he objected to a public school bringing a drag queen who had
+                worked as a prostitute into the school to read stories to young
+                children, one commenter responded:
                 "You don't want your children to even know that gay people
                 exist."
+                This response is, quite obviously, not an effort to seriously
+                engage Dreher's case that "inviting drag queen prostitutes to
+                read to young children might be a bad idea": to jump from that
+                to "you don't want your children to even know that gay people
+                exist" makes no rational sense. So why in the world would a
+                commenter post this? Once again, we are witnessing an ideology
+                as consisting of "postulates for constructing and keeping
+                intact a second reality." The postulate in play here is that
+                any person who objects to any aspect of the ongoing sexual
+                revolution, whatever their argument might be, in reality is
+                just a reactionary puritan. The utility of adopting this stance
+                is that the adoptor never needs to address any actual arguments
+                put forward by anyone who dissents from their ideology: no
+                need, such people are just repressed neurotics who wish to
+                impose their own inability to "realize themselves as sexual
+                beings" on to others. Given this identification of the foe as
+                "oppresive other," the need to deal with any of their actual
+                arguments is swepy away.
             </p>
 
             <p>
